--- a/src/interface/templates/legalUser/index.html
+++ b/src/interface/templates/legalUser/index.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 
-{% block title %}管理员后台 - 清华大学微信公众号备案平台{% endblock %}
+{% block title %}用户后台 - 清华大学信息化统计平台{% endblock %}
 
 {% block subtitle %}
     <a class="navbar-brand">&gt;</a>
-    <a class="fake-link-scroll navbar-brand">管理员后台</a>
+    <a class="fake-link-scroll navbar-brand">活动发布</a>
 {% endblock subtitle %}
 
 {% block left-column %}
@@ -22,66 +22,54 @@
     </ul>
     <hr>
     <a class="fake-link left-column-menu" data-toggle="collapse" data-target="#application-menu">
-        <strong><i class="fa fa-wrench fa-fw"></i>　管理公众号申请</strong>
+        <strong><i class="fa fa-wrench fa-fw"></i>　发布活动</strong>
     </a>
     <ul class="nav nav-stacked collapse in" id="application-menu">
         <hr>
         <ul class="nav nav-stacked collapse in nav-pills">
             <li id="pending-applications-item" class="nav-header left-column-item"
                 data-url="{% url 'test' %}">
-                <a class="fake-link"><i class="fa fa-tasks fa-fw"></i>　待审批申请
+                <a class="fake-link"><i class="fa fa-tasks fa-fw"></i>　报名/统计表
                     <span class="badge badge-info pull-right" data-source="{% url 'test' %}"></span>
                 </a>
             </li>
             <li id="processed-applications-item" class="nav-header left-column-item"
                 data-url="{% url 'test' %}">
-                <a class="fake-link"><i class="fa fa-check fa-fw"></i>　我处理的申请</a>
+                <a class="fake-link"><i class="fa fa-check fa-fw"></i>　实验室招募</a>
             </li>
             <li id="all-applications-item" class="nav-header left-column-item"
                 data-url="{% url 'test' %}">
-                <a class="fake-link"><i class="fa fa-list-alt fa-fw"></i>　所有申请</a>
+                <a class="fake-link"><i class="fa fa-list-alt fa-fw"></i>　投票</a>
             </li>
         </ul>
     </ul>
     <hr>
     <a class="fake-link left-column-menu" data-toggle="collapse" data-target="#analyse-menu">
-        <strong><i class="fa fa-signal fa-fw"></i>　查看并分析</strong>
+        <strong><i class="fa fa-signal fa-fw"></i>　分析统计</strong>
     </a>
     <ul class="nav nav-stacked collapse in" id="analyse-menu">
         <hr>
         <ul class="nav nav-stacked collapse in nav-pills">
             <li id="official-accounts-list-item" class="nav-header left-column-item"
                 data-url="{% url 'test' %}">
-                <a class="fake-link"><i class="fa fa-th-list fa-fw"></i>　公众号列表</a>
-            </li>
-            <li id="articles-list-item" class="nav-header left-column-item"
-                data-url="{% url 'test' %}">
-                <a class="fake-link"><i class="fa fa-file-text fa-fw"></i>　文章列表</a>
+                <a class="fake-link"><i class="fa fa-th-list fa-fw"></i>　我的报名</a>
             </li>
             <li id="statistics-list-item" class="nav-header left-column-item"
                 data-url="{% url 'test' %}">
                 <a class="fake-link"><i class="fa fa-bar-chart fa-fw"></i>　统计信息</a>
             </li>
-        </ul>
-    </ul>
-    <hr>
-    <a class="fake-link left-column-menu" data-toggle="collapse" data-target="#forewarn-menu">
-        <strong><i class="fa fa-bell fa-fw"></i>　数据预警</strong>
-    </a>
-    <ul class="nav nav-stacked collapse in" id="forewarn-menu">
-        <hr>
-        <ul class="nav nav-stacked collapse in nav-pills">
-            <li id="forewarn-rules-item" class="nav-header left-column-item"
+            <li id="empty-item1" class="nav-header left-column-item"
                 data-url="{% url 'test' %}">
-                <a class="fake-link"><i class="fa fa-sliders fa-fw"></i>　预警规则</a>
+                <a class="fake-link"></a>
             </li>
-            <li id="forewarn-records-item" class="nav-header left-column-item"
+            <li id="empty-item2" class="nav-header left-column-item"
                 data-url="{% url 'test' %}">
-                <a class="fake-link"><i class="fa fa-history fa-fw"></i>　预警记录</a>
+                <a class="fake-link"></a>
             </li>
         </ul>
     </ul>
     <hr>
+
 {% endblock left-column %}
 
 {% block main-page %}
