--- a/src/interface/templates/legalUser/index.html
+++ b/src/interface/templates/legalUser/index.html
@@ -15,7 +15,7 @@
         <hr>
         <ul class="nav nav-stacked collapse in nav-pills">
             <li id="dashboard-item" class="nav-header left-column-item"
-                data-url="{% url 'test' %}">
+                data-url="{% url 'legalUser/dashboard' %}">
                 <a class="fake-link"><i class="fa fa-dashboard fa-fw"></i>　信息概览</a>
             </li>
         </ul>
@@ -58,12 +58,10 @@
                 data-url="{% url 'test' %}">
                 <a class="fake-link"><i class="fa fa-bar-chart fa-fw"></i>　统计信息</a>
             </li>
-            <li id="empty-item1" class="nav-header left-column-item"
-                data-url="{% url 'test' %}">
+            <li id="empty-item1" class="nav-header left-column-item">
                 <a class="fake-link"></a>
             </li>
-            <li id="empty-item2" class="nav-header left-column-item"
-                data-url="{% url 'test' %}">
+            <li id="empty-item2" class="nav-header left-column-item">
                 <a class="fake-link"></a>
             </li>
         </ul>
