--- a/src/interface/static/base/css/styles.css
+++ b/src/interface/static/base/css/styles.css
@@ -1,4 +1,16 @@
 
+.operation{
+
+        float:left;
+    }
+    .operation li{
+        float: left;
+        list-style-type:none;
+        padding-left: 20px;
+    }
+
+/**********************/
+
 body {
     min-width: 320px;
 }
@@ -38,6 +50,7 @@ footer {
     -o-border-radius: 10px;
     border-radius: 10px;
 }
+
 
 .navbar {
     width: 100%;
