--- a/src/interface/templates/legalUser/applications/applications_list.html
+++ b/src/interface/templates/legalUser/applications/applications_list.html
@@ -4,19 +4,25 @@
 
 {% block defaults %}
     url: "{% url 'legalUser/applications-list' type %}",
-    sort_by: "official_account__name",
+    sort_by: "status",
     sort_order: "asc",
-    search_field: "official_account__name"
+    search_field: "status"
 {% endblock defaults %}
 
 {% block head %}
-    <th class="th-sortable" data-key="official_account__name" style="width: 15%; min-width: 120px">
-        公众号名称
+    <th class="th-sortable" data-key="name" style="width: 15%; min-width: 120px">
+        活动名称
     </th>
-    <th style="width: 15%; min-width: 110px">公众号负责人</th>
-    <th style="width: 10000px">公众号简介</th>
-    {% if type != 'pending' %}
-        <th style="min-width: 120px">审批状态</th>
+    <th class="th-sortable" data-key="subscribe_time" style="width: 15%; min-width: 110px">
+        上次修改
+    </th>
+    <th class="th-sortable" data-key="description" style="width: 10000px">
+        活动说明
+    </th>
+    {% if type == 'all' %}
+        <th class="th-sortable" data-key="status" style="min-width: 120px">
+            活动状态
+        </th>
     {% endif %}
     <th>
         <div style="width: 60px"></div>
