implement simple questionnaire design page

--- a/src/interface/templates/legalUser/applications/applications.html
+++ b/src/interface/templates/legalUser/applications/applications.html
@@ -1,5 +1,5 @@
-{% extends 'admin/index.html' %}
+{% extends 'legalUser/index.html' %}
 
 {% block main-page %}
-    {% include 'admin/applications/applications.ajax.html' %}
+    {% include 'legalUser/applications/applications.ajax.html' %}
 {% endblock main-page %}
