--- a/src/interface/templates/legalUser/index.html
+++ b/src/interface/templates/legalUser/index.html
@@ -4,7 +4,7 @@
 
 {% block subtitle %}
     <a class="navbar-brand">&gt;</a>
-    <a class="fake-link-scroll navbar-brand">活动发布</a>
+    <a class="fake-link-scroll navbar-brand">用户后台</a>
 {% endblock subtitle %}
 
 {% block left-column %}
@@ -27,18 +27,16 @@
     <ul class="nav nav-stacked collapse in" id="application-menu">
         <hr>
         <ul class="nav nav-stacked collapse in nav-pills">
-            <li id="pending-applications-item" class="nav-header left-column-item"
-                data-url="{% url 'test' %}">
-                <a class="fake-link"><i class="fa fa-tasks fa-fw"></i>　报名/统计表
-                    <span class="badge badge-info pull-right" data-source="{% url 'test' %}"></span>
-                </a>
+            <li id="enroll-design-item" class="nav-header left-column-item"
+                data-url="{% url 'legalUser/design' 'enroll' %}">
+                <a class="fake-link"><i class="fa fa-tasks fa-fw"></i>　报名/统计表</a>
             </li>
-            <li id="processed-applications-item" class="nav-header left-column-item"
-                data-url="{% url 'legalUser/dashboard' %}">
+            <li id="recuit-design-item" class="nav-header left-column-item"
+                data-url="{% url 'legalUser/design' 'recruit' %}">
                 <a class="fake-link"><i class="fa fa-check fa-fw"></i>　实验室招募</a>
             </li>
-            <li id="all-applications-item" class="nav-header left-column-item"
-                data-url="{% url 'test' %}">
+            <li id="vote-design-item" class="nav-header left-column-item"
+                data-url="{% url 'legalUser/design' 'vote' %}">
                 <a class="fake-link"><i class="fa fa-list-alt fa-fw"></i>　投票</a>
             </li>
         </ul>
@@ -50,9 +48,11 @@
     <ul class="nav nav-stacked collapse in" id="analyse-menu">
         <hr>
         <ul class="nav nav-stacked collapse in nav-pills">
-            <li id="official-accounts-list-item" class="nav-header left-column-item"
+            <li id="all-applications-item" class="nav-header left-column-item"
                 data-url="{% url 'legalUser/applications' 'all' %}">
-                <a class="fake-link"><i class="fa fa-th-list fa-fw"></i>　我的报名</a>
+                <a class="fake-link"><i class="fa fa-th-list fa-fw"></i>　我的报名
+                    <span class="badge badge-info pull-right" data-source="{% url 'test' %}"></span>
+                </a>
             </li>
             <li id="statistics-list-item" class="nav-header left-column-item"
                 data-url="{% url 'test' %}">
