--- a/src/interface/templates/legalUser/dashboard.ajax.html
+++ b/src/interface/templates/legalUser/dashboard.ajax.html
@@ -47,7 +47,7 @@
                         {% if pending_applications %}
                             {% for app in pending_applications %}
                                 <tr>
-                                    <td><a class="ajax-link"
+                                    <td><a class="ajax-link fake-link"
                                            data-url="{% url 'test' %}">
                                         {{ app.name }} </a>
                                     </td>
@@ -66,22 +66,22 @@
                                         <div id="pending{{forloop.counter}}" class="operation" style="display:none; width: 100%">
                                             <ul>
                                                 <li style="width: 25%" align="left">
-                                                    <a href="#" >
+                                                    <a class="fake-link" href="#" >
                                                         <i class="fa fa-pencil-square-o fa-fw fa-2x" aria-hidden="true"></i> 修改
                                                     </a>
                                                 </li>
                                                 <li style="width: 25%" align="left">
-                                                    <a href="#" >
+                                                    <a class="fake-link" href="#" >
                                                         <i class="fa fa-file-text-o fa-fw fa-2x" aria-hidden="true"></i> 发布
                                                     </a>
                                                 </li>
                                                 <li style="width: 25%" align="left">
-                                                    <a href="#" >
+                                                    <a class="fake-link" href="#" >
                                                         <i class="fa fa-bar-chart-o fa-fw fa-2x" aria-hidden="true"></i> 结果
                                                     </a>
                                                 </li>
                                                 <li style="width: 25%" align="left">
-                                                    <a href="#" >
+                                                    <a class="fake-link" href="#" >
                                                         <i class="fa fa-trash fa-fw fa-2x" aria-hidden="true"></i> 删除
                                                     </a>
                                                 </li>
@@ -135,7 +135,7 @@
                             {% for activity in activities %}
                                 <tr>
                                     <td>{{ forloop.counter }}</td>
-                                    <td><a class="ajax-link"
+                                    <td><a class="ajax-link fake-link"
                                            data-url="{% url 'test' %}">
                                         {{ activity.name|truncatechars:100 }}
                                     </a></td>
@@ -163,17 +163,17 @@
                                         <div id="already{{forloop.counter}}" class="operation" style="display:none; width: 100%">
                                             <ul>
                                                 <li style="width: 30%" align="center">
-                                                    <a href="#" >
+                                                    <a class="fake-link" href="#" >
                                                         <i class="fa fa-share-square-o fa-fw fa-2x" aria-hidden="true"></i> 分享
                                                     </a>
                                                 </li>
                                                 <li style="width: 30%" align="center">
-                                                    <a href="#" >
+                                                    <a class="fake-link" href="#" >
                                                         <i class="fa fa-bar-chart-o fa-fw fa-2x" aria-hidden="true"></i> 结果
                                                     </a>
                                                 </li>
                                                 <li style="width: 30%" align="center">
-                                                    <a href="#" >
+                                                    <a class="fake-link" href="#" >
                                                         <i class="fa fa-trash fa-fw fa-2x" aria-hidden="true"></i> 删除
                                                     </a>
                                                 </li>
@@ -220,7 +220,7 @@
                 <div class="panel-body">
                     {% for account in unprocessed_account %}
                         <p>
-                            <a style="cursor:pointer;" class="message-link"
+                            <a style="cursor:pointer;" class="message-link fake-link"
                                data-url="{% url 'test' %}">
                                 {{ account.name }}</a>
                             <span class="badge pull-right">{{ account.message}}</span>
@@ -257,7 +257,7 @@
                             {% for activity in activities %}
                                 <tr>
                                     <td>{{ forloop.counter }}</td>
-                                    <td><a class="ajax-link" data-url="{% url 'test' %}">
+                                    <td><a class="ajax-link fake-link" data-url="{% url 'test' %}">
                                         {{ activity.name }}
                                     </a></td>
                                     <td>{{ activity.fillin}}</td>
