test modal and optimize appearence on mobilephone

--- a/src/interface/templates/legalUser/applications/applications.html
+++ b/src/interface/templates/legalUser/applications/applications.html
@@ -1,5 +1,7 @@
 {% extends 'legalUser/index.html' %}
 
+{% block itemtitle %} 所有报名 {% endblock itemtitle %}
+
 {% block main-page %}
     {% include 'legalUser/applications/applications.ajax.html' %}
 {% endblock main-page %}
