--- a/src/interface/templates/legalUser/design/design.ajax.html
+++ b/src/interface/templates/legalUser/design/design.ajax.html
@@ -45,13 +45,13 @@
 </script>
 
 
-<div class="top-row">
+<div class="top-row hidden-xs">
     <a>&nbsp;</a>
     <a class="fake-link pull-right">
         <strong>{{ design_type }}　<i class="fa {{ design_icon }} fa-fw"></i></strong>
     </a>
 </div>
-<hr>
+<hr class="hidden-xs">
 
 <div class="row">
     <div class="col-md-10">
@@ -59,7 +59,7 @@
     </div>
     <div class="col-md-2 container right-column">
 
-        <ul class="nav nav-stacked nav-pills">
+        <ul class="nav nav-stacked nav-pills affix">
             <li id="single-question" class="nav-header ">
                 <a class="fake-link"><i class="fa fa-dot-circle-o fa-fw"></i>　单选题</a>
             </li>
