--- a/src/interface/templates/legalUser/index.html
+++ b/src/interface/templates/legalUser/index.html
@@ -7,6 +7,10 @@
     <a class="fake-link-scroll navbar-brand">用户后台</a>
 {% endblock subtitle %}
 
+{% block itemtitle %} 
+    用户后台
+{% endblock itemtitle %}
+
 {% block left-column %}
     <a class="fake-link left-column-menu" data-toggle="collapse" data-target="#dashboard-menu">
         <strong><i class="fa fa-dashboard fa-fw"></i>　信息概览</strong>
@@ -61,9 +65,7 @@
             <li id="empty-item1" class="nav-header left-column-item">
                 <a class="fake-link"></a>
             </li>
-            <li id="empty-item2" class="nav-header left-column-item">
-                <a class="fake-link"></a>
-            </li>
+            
         </ul>
     </ul>
     <hr>
