--- a/src/interface/static/base/css/styles.css
+++ b/src/interface/static/base/css/styles.css
@@ -124,6 +124,14 @@ a > span.badge-info {
     padding-top: 20px;
 }
 
+/*右边题型选择栏固定*/
+#right-column {
+    height: auto;
+    position: fixed;
+    margin-top: -20px;
+    padding-top: 20px;
+}
+
 /* crop and resize article avatar */
 .article-avatar {
     width: 180px;
@@ -265,12 +273,12 @@ th.th-sortable {
 @media screen and (max-width: 767px) {
 
     .main {
-        padding-top: 140px;
+        padding-top: 70px;
     }
 
     #left-column {
         width: 230px !important;
-        max-height: calc(100vh - 100px);
+        max-height: calc(100vh - 40px);
         z-index: 90;
         position: fixed;
         margin-top: -30px;
