--- a/src/interface/templates/base.html
+++ b/src/interface/templates/base.html
@@ -50,9 +50,7 @@
             </button>
         </div>
         <![endif]-->
-        <div class="nav navbar-nav navbar-left visible-xs">
-            <a class="fake-link-scroll navbar-brand">清华大学信息化统计平台</a>
-        </div>
+        
         <div class="nav navbar-nav navbar-left hidden-xs">
             <a class="fake-link-scroll navbar-brand">清华大学信息化统计平台</a>
             {% block subtitle %}
@@ -68,6 +66,22 @@
                     <i class="fa fa-navicon fa-fw"></i>
                 </a>
             </li>
+            <li class="pull-left visible-xs">
+                <a style="font-size: 18px; color: #18bc9c">
+                    <strong>
+                        {% block itemtitle %}
+                        {% endblock itemtitle %}
+                    </strong>
+                </a>
+            </li>
+            {% block right-toggle %}
+                <!--li class="pull-right visible-xs">
+                    <a id="left-column-toggle" class="fake-link">
+                        <i class="fa fa-navicon fa-fw"></i>
+                    </a>
+                </li-->
+            {% endblock right-toggle %}
+            
             <li class="dropdown">
                 <a class="pull-right fake-link dropdown-toggle" role="button" data-toggle="dropdown" data-target="#">
                     <i class="glyphicon glyphicon-user"></i> {{ username }} <span class="caret"></span>
