--- a/src/interface/templates/legalUser/applications/applications.ajax.html
+++ b/src/interface/templates/legalUser/applications/applications.ajax.html
@@ -1,12 +1,12 @@
 
 
 
-<div class="top-row">
+<div class="top-row hidden-xs">
     <a>&nbsp;</a>
     <a class="fake-link pull-right">
         <strong>{{ application_type }}　<i class="fa {{ application_icon }} fa-fw"></i></strong>
     </a>
 </div>
-<hr>
+<hr class="hidden-xs">
 
 {% include 'legalUser/applications/applications_list.html' %}
