--- a/src/interface/templates/legalUser/dashboard.ajax.html
+++ b/src/interface/templates/legalUser/dashboard.ajax.html
@@ -18,13 +18,13 @@
 });
 </script>
 
-<div class="top-row">
+<div class="top-row hidden-xs">
     <a>&nbsp</a>
     <a class="fake-link pull-right">
         <strong>信息概览　<i class="fa fa-dashboard fa-fw"></i></strong>
     </a>
 </div>
-<hr>
+<hr class="hidden-xs">
 <div class="row">
     <div class="col-md-9">
         <div class="panel panel-default">
@@ -81,7 +81,7 @@
                                                     </a>
                                                 </li>
                                                 <li style="width: 25%" align="left">
-                                                    <a class="fake-link" href="#" >
+                                                    <a class="fake-link" href="javascript:showConfirmModal('删除报名', '确定要删除吗？')" >
                                                         <i class="fa fa-trash fa-fw fa-2x" aria-hidden="true"></i> 删除
                                                     </a>
                                                 </li>
@@ -173,7 +173,7 @@
                                                     </a>
                                                 </li>
                                                 <li style="width: 30%" align="center">
-                                                    <a class="fake-link" href="#" >
+                                                    <a class="fake-link" href="javascript:showConfirmModal('删除报名', '确定要删除吗？')" >
                                                         <i class="fa fa-trash fa-fw fa-2x" aria-hidden="true"></i> 删除
                                                     </a>
                                                 </li>
