--- a/src/interface/templates/legalUser/index.html
+++ b/src/interface/templates/legalUser/index.html
@@ -72,6 +72,13 @@
 
 {% endblock left-column %}
 
+{% block user-menu %}
+    <li>
+        <a href="{% url 'legalUser/information' %}"> <i class="glyphicon glyphicon-info-sign" id="main_user_info"></i>　用户信息</a>
+        <a href="{% url 'legalUser/login' %}"> <i class="glyphicon glyphicon-log-out" id="main_log_agin" ></i>　注销</a>
+    </li>
+{% endblock user-menu %}
+
 {% block main-page %}
 
 {% endblock main-page %}
