--- a/src/interface/templates/legalUser/design/design_list.html
+++ b/src/interface/templates/legalUser/design/design_list.html
@@ -4,7 +4,7 @@
 <div class="panel panel-default hover_heading" style="border='0'">
     <div class="panel-body heading">
         <div class="row">
-            <h4 class="col-xs-12" align="center">
+            <h4 class="col-xs-12" align="center" id="qst_title">
                 {% block title %}
                     {% if type == 'enroll' %}
                         XX活动报名
@@ -16,16 +16,18 @@
                 {% endblock title %}
             </h4>
 
-            <div class="col-xs-12" >
+            <div class="col-xs-12" id="qst_description">
                 {% block description %}假装有活动说明{% endblock description %}
             </div>
         </div>
         <div style="display:none;" id="collapse-heading">
             <hr>
-            <a class="fake-link collapse-row pull-right" href="#">
+            <a class="fake-link collapse-row pull-right" 
+               href="javascript:showModal('{% url 'legalUser/modal' 'qst_name'%}', 'activity-modal')">
                 <span class="fa fa-check-square-o fa-fw"></span> 编辑&emsp;
             </a>
         </div>
+
     </div>
 </div>
         {% block content-before %}
