--- a/src/interface/templates/legalUser/design/modal/qst_name_modal.html
+++ b/src/interface/templates/legalUser/design/modal/qst_name_modal.html
@@ -4,7 +4,7 @@
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
                         aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">创建报名</h4>
+                <h4 class="modal-title" id="myModalLabel">修改问卷名称和说明</h4>
             </div>
             
 
@@ -41,24 +41,27 @@
     </div>
 
     <script>
-        var modal = $("#application-modal");
+        var modal = $("#activity-modal");
 
         var status_input = modal.find("input[name=status]");
         var submit_button = modal.find("#submit-button-field");
         var title_field = modal.find("#activity_title")
         var description_field = modal.find("#activity_description");
 
+        
         modal.ready(function () {
-            
-            handleFormPost("#create-activity-form", "{% url 'api/modify_something' %}", {
+    
+            title_field.val($("#qst_title").text().trim());
+            description_field.val($("#qst_description").text().trim());
+
+            handleFormPost("#create-activity-form", "{% url 'api/modify_something' 'qst_name'%}", {
                 success_callback: function (data) {
                     if (data === 'ok') {
+                        $("#qst_title").html(title_field.val());
+                        $("#qst_description").html(description_field.val());
+
                         modal.modal('hide');
-                        loadContent(window.location.href, {}, undefined, {
-                            replace: true,
-                            anim: false,
-                            scroll: false
-                        });
+                        
                     }
                 }
             });
