创建新问卷和添加新题的时候发送消息到数据库并获得id；问卷题目和说明在线编辑并提交修改到数据库

--- a/src/interface/templates/legalUser/design/design_list.html
+++ b/src/interface/templates/legalUser/design/design_list.html
@@ -23,7 +23,7 @@
         <div style="display:none;" id="collapse-heading">
             <hr>
             <a class="fake-link collapse-row pull-right" 
-               href="javascript:showModal('{% url 'legalUser/modal' 'qst_name'%}', 'activity-modal')">
+               href="javascript:showModal('{% url 'legalUser/modal' 'qst_name' act_id %}', 'activity-modal')">
                 <span class="fa fa-check-square-o fa-fw"></span> 编辑&emsp;
             </a>
         </div>
