--- a/src/interface/templates/legalUser/design/design.ajax.html
+++ b/src/interface/templates/legalUser/design/design.ajax.html
@@ -6,43 +6,68 @@
         var $this = $(".right-column");
 
         var questions_params = {
-            
+            'questions_type': "default",
+            'questions_id': -1
         };
+
+        function createNewQst(qst_type) {
+            $.ajax({
+                type: "POST",
+                url: "{% url 'api/create_new_qst' %}",
+                data: "&act_id=" + "{{act_id}}" + "&qst_type=" + qst_type,
+                success: function(data) {
+                    if(data['status'] == 'ok'){
+                        questions_params['questions_id'] = data['id'];
+                    }
+                        
+                },
+                error: function (xhr, textStatus, errorThrown) {
+                    alert(xhr.responseText.substr(0, 500));
+                }
+            });
+        }
 
         //刷新中间问卷的最后一个问题
         refreshTable = function (callback) {
             
-            loadContentOn($(".last-question"), "{% url 'legalUser/design/question' type%}", questions_params, {anim: false, scroll: false}, callback);
+            loadContentOn($(".last-question"), "{% url 'legalUser/design/question' type act_id%}", questions_params, {anim: false, scroll: false}, callback);
             $(".last-question").removeClass("last-question");
             $(".questions-list").append('<li class="question last-question">\
                                             \
                                          </li>');
         };
 
+        
+
         //设置各个题型的点击事件
         $this.find("#single-question").click(function () {
             questions_params['questions_type'] = "single";
-            
+            createNewQst("single");
             refreshTable();
         })
         $this.find("#multi-question").click(function () {
             questions_params['questions_type'] = "multi";
+            createNewQst("multi");
             refreshTable();
         })
         $this.find("#fillin-question").click(function () {
             questions_params['questions_type'] = "fillin";
+            createNewQst("fillin");
             refreshTable();
         })
         $this.find("#vote-question").click(function () {
             questions_params['questions_type'] = "vote";
+            createNewQst("vote");
             refreshTable();
         })
         $this.find("#mark-question").click(function () {
             questions_params['questions_type'] = "mark";
+            createNewQst("mark");
             refreshTable();
         })
         $this.find("#sort-question").click(function () {
             questions_params['questions_type'] = "sort";
+            createNewQst("sort");
             refreshTable();
         })
 
