--- a/src/interface/templates/legalUser/design/design.ajax.html
+++ b/src/interface/templates/legalUser/design/design.ajax.html
@@ -11,10 +11,11 @@
         };
 
         function createNewQst(qst_type) {
+            var rank = $(".last-question").index();
             $.ajax({
                 type: "GET",
                 url: "{% url 'api/create_new_qst' %}",
-                data: "&act_id=" + "{{act_id}}" + "&qst_type=" + qst_type,
+                data: "&act_id=" + "{{act_id}}" + "&qst_type=" + qst_type + "&qst_rank=" + rank,
                 success: function(data) {
                     if(data['status'] == 'ok'){
                         questions_params['questions_id'] = data['id'];
