--- a/src/interface/templates/legalUser/dashboard.ajax.html
+++ b/src/interface/templates/legalUser/dashboard.ajax.html
@@ -81,7 +81,7 @@
                                                     </a>
                                                 </li>
                                                 <li style="width: 25%" align="left">
-                                                    <a class="fake-link" href="javascript:showConfirmModal('删除报名', '确定要删除吗？')" >
+                                                    <a class="fake-link" href="javascript:remove_act('{{app.id}}', '{% url 'api/remove_act' %}')">
                                                         <i class="fa fa-trash fa-fw fa-2x" aria-hidden="true"></i> 删除
                                                     </a>
                                                 </li>
