--- a/src/interface/templates/guest/guest_index.html
+++ b/src/interface/templates/guest/guest_index.html
@@ -19,7 +19,7 @@
         <hr>
         <ul class="nav nav-stacked collapse in nav-pills">
             <li id="dashboard-item" class="nav-header left-column-item"
-                data-url="{% url 'legalUser/dashboard' %}">
+                data-url="{% url 'guest/dashboard' %}">
                 <a class="fake-link"><i class="fa fa-dashboard fa-fw"></i>　信息概览</a>
             </li>
         </ul>
