--- a/src/interface/templates/base.html
+++ b/src/interface/templates/base.html
@@ -38,6 +38,23 @@
     {% endblock scripts %}
 </head>
 
+<style>
+    *{
+        margin: 0;
+        padding: 0;
+    }
+    html,body { height: 100%;}
+    .wrap{
+        min-height: 100%;
+    }
+    .main{
+        padding-bottom: 60px;
+    }
+    footer {
+        margin-top: -60px;
+    }
+</style>
+
 <body>
 <!-- header -->
 <div id="top-nav" class="navbar navbar-default navbar-static-top affix">
@@ -100,6 +117,7 @@
 
 
 <!-- Main -->
+<div class="wrap">
 <div class="container-fluid main">
     {% block main-frame %}
         <div class="row">
@@ -140,6 +158,7 @@
     {% endblock main-frame %}
 </div>
 <!-- /Main -->
+</div>
 
 <footer class="text-center">清华大学信息化统计平台</footer>
 
